deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: hello-deployment
    labels:
       app: hello
spec:
   replicas: 5
   selector:
     matchLabels:
         app: hello
   template: 
     metadata:
         labels:
            app: hello
     spec:
       containers:
       - name: hello
         image: nginxdemos/hello
         ports:
          - containerPort: 80
