ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
   name: hello-ingress
   annotations:
      nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: hello.intern.local
    http: 
      paths:
       - path: /
         pathType: Prefix
         backend: 
             service:
                name: hello-service 
                port: 
                  number: 80
